	**************************************************
	*						 *
	*	       2.1 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.1.0


NEW FEATURES

   o	Faster algorithm in summaryRprof.
	

INSTALLATION CHANGES

   o	The gcc compilation flag -mieee-fp is used on x86_64 as well as
	ix86 platforms.

   o	-D__NO_MATH_INLINES is only used on older ix86 glibc-based
	systems which need it (tested at configure time).

   o	R_XTRA_[CF]FLAGS are now used during the configuration tests,
	and [CF]PICFLAGS if --enable-R-shlib was specified.  This
	ensures that features such as inlining are only used if the
	compilation flags specified support them.  (PR#7257)



BUG FIXES



	**************************************************
	*						 *
	*	       2.0 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.0.0 patched


BUG FIXES

    o	model.frame.default() takes row names from the response
	variable if that has suitable names and there is no 'data'
	argument.  (This follows S but was not previously implemented
	in R.)

    o	write.table() was not respecting the 'dec' argument for complex
	numbers.

    o	write.table() printed a mixture of numeric and complex numbers
	as all complex.  (PR#7260)

    o   R CMD INSTALL failed with versioned installs on packages which
	save images (only).

    o   dlogis() gave NaN not 0 for large negative arguments.

    o   Building on Alpha OSF/1 no longer forces the C flag -std1,
	which appears to be no longer needed.  (PR#7257)



        *********************************************************
        *                                                       *
        *       News of 1.x.y and 2.0.0 is in file `ONEWS'      *
        *       News of 1.0.0 and earlier is in file `OONEWS'   *
        *                                                       *
        *********************************************************